--- a/quiz_window.html
+++ b/quiz_window.html
@@ -75,6 +75,7 @@
     </nav><br><br>
     <h1 id="header" style="background-color: bisque;padding: 5px;">Quiz</h1>
     <div id="box" class="container1">
+        <div>Etes-vous d'accord avec les affirmations suivantes? (0: pas du tout ; 5 : totalement)</div>
         <div id="qbox">
         </div><br>
         <div>
