--- a/quiz_window.html
+++ b/quiz_window.html
@@ -62,6 +62,11 @@
         .end {
             display: 'none';
         }
+
+        .radio {
+            margin-left: 10%;
+            display: inline-block;
+        }
     </style>
 </head>
 <body>
